# cocoon

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build-agent-contexts.yml
data/: registry.json
docs/postmortems/: 2026-05-19-hermes-telegram-flight-search.md
scripts/: build_agent_contexts.py  conformance_probe.py  e2e_smoke.py
scripts/eval/: README.md  discovery_dataset.jsonl  discovery_dataset_scaled.jsonl  dspy_discovery.py  optimize.py  run_discovery_eval.py  scoring.py
skill/: SKILL.md  sources.json
src/cocoon/: __init__.py  agent_context.py  argv.py  auth.py  auth_flows.py  auth_recipes.py  catalog.py  cli.py  conformance.py  discovery_prompt.md  errors.py  materialize.py  paths.py  search.py  server.py
src/cocoon/data/: agent_contexts.json  auth_recipes.json  dev_catalog.json
src/cocoon/sandbox/: __init__.py  linux.py  macos.py  policy.py
tests/: conftest.py  test_agent_context.py  test_argv.py  test_auth.py  test_auth_flows.py  test_auth_recipes.py  test_catalog.py  test_cli.py  test_conformance.py  test_errors.py  test_materialize.py  test_paths.py  test_sandbox.py  test_search.py  test_server.py
