[project]
name = "cocoon"
version = "0.4.0"
description = "MCP facade over the printing-press CLI corpus: one tool that discovers, auto-installs, sandboxes, and calls any API in the catalog."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vu1n" }]
keywords = ["mcp", "claude", "agent", "printing-press", "sandbox"]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cocoon = "cocoon.cli:main"

[project.urls]
Repository = "https://github.com/vu1n/cocoon"
Skill = "https://github.com/vu1n/cocoon/tree/main/skill"
Issues = "https://github.com/vu1n/cocoon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cocoon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
