[project]
# `cocoon` was taken on PyPI (acegik's single-release 2021 placeholder).
# We publish as `cocoon-mcp` while the Python package, the installed
# script, and everything user-facing stays branded `cocoon`. PEP 541
# reclaim of the bare name is a separate, slow track.
name = "cocoon-mcp"
version = "0.4.0a2"
description = "MCP facade over the printing-press CLI corpus: one tool that discovers, auto-installs, sandboxes, and calls any API in the catalog."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vu1n" }]
keywords = ["mcp", "claude", "agent", "printing-press", "sandbox"]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
cocoon = "cocoon.cli:main"

[project.urls]
Repository = "https://github.com/vu1n/cocoon"
Skill = "https://github.com/vu1n/cocoon/tree/main/skill"
Issues = "https://github.com/vu1n/cocoon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cocoon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
