[project]
# `cocoon` was taken on PyPI (acegik's single-release 2021 placeholder).
# We publish as `cocoon-mcp` while the Python package, the installed
# script, and everything user-facing stays branded `cocoon`. PEP 541
# reclaim of the bare name is a separate, slow track.
name = "cocoon-mcp"
version = "0.4.0a8"
description = "Execution runtime for named third-party APIs: one MCP tool that calls 140+ printing-press CLIs on demand, sandboxed per call, with per-API auth scoping and readiness-aware discovery."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "vu1n" }]
keywords = ["mcp", "claude", "agent", "printing-press", "sandbox"]
dependencies = [
    "mcp>=1.2",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]
# `optimize` is for the discovery eval / GEPA loop (scripts/eval/). cocoon's
# runtime never needs dspy — it stays LM-free. Install with `uv sync --extra
# optimize`. The actual optimize run needs an LM configured via env (e.g.
# DSPY_LM_MODEL, ANTHROPIC_API_KEY) — see scripts/eval/optimize.py.
optimize = [
    "dspy>=2.5",
]

[project.scripts]
cocoon = "cocoon.cli:main"

[project.urls]
Repository = "https://github.com/vu1n/cocoon"
Skill = "https://github.com/vu1n/cocoon/tree/main/skill"
Issues = "https://github.com/vu1n/cocoon/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cocoon"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
